# priveil

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.cursor/skills/: conduit-core.md  conduit-py.md  domain-doc.md  ship-and-watch.md  vertical-slices.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
bruno/alias-api/: 02-detect-basic.bru  03-detect-no-refine.bru  06-anonymise-auto-detect.bru  06-pseudonymise-accurate.bru  07-anonymise-with-detections.bru  08-anonymise-operator-overrides.bru  09-anonymise-empty-text-422.bru  09-pseudonymise-operator-overrides.bru  15-assess-auto-detect.bru  16-assess-with-detections.bru  17-assess-low-risk.bru  18-assess-not-configured-503.bru  19-assess-empty-text-422.bru  bruno.json
bruno/priveil-api/: 01-health.bru  02-detect-accurate.bru  03-detect-fast.bru  04-detect-empty-text-422.bru  05-detect-unsupported-language-422.bru  07-pseudonymise-fast.bru  08-pseudonymise-with-detections.bru  10-assess-auto-detect.bru  11-assess-with-detections.bru  12-assess-low-risk.bru  13-assess-not-configured-503.bru  14-assess-empty-text-422.bru  bruno.json
docs/domain/: alias.md  priveil.md
src/alias/: app.py  settings.py
src/alias/api/: deps.py
src/alias/api/routes/: anonymise.py  assess.py  detect.py  pseudonymise.py
src/alias/domain/: anonymisation.py  assessment.py  detection.py  entities.py  judgement.py  pseudonymisation.py
src/alias/engine/: analyser.py  anonymiser.py  pseudonymiser.py
src/alias/judge/: assessor.py  model.py  refiner.py
src/priveil/: app.py  mcp.py  settings.py
src/priveil/api/: deps.py  models.py
src/priveil/api/routes/: assess.py  detect.py  health.py  pseudonymise.py
src/priveil/domain/: assessment.py  detection.py  entities.py  judgement.py  pseudonymisation.py
src/priveil/engine/: analyser.py  pseudonymiser.py
src/priveil/judge/: assessor.py  model.py  refiner.py
src/priveil/judge/prompts/: assessor.md  refiner.md
src/priveil/mcp/: __init__.py  server.py  tools.py
src/priveil/recognisers/: au_abn.py  au_acn.py  au_bsb.py  au_medicare.py  au_phone.py  au_tfn.py  registry.py
tests/: conftest.py
tests/integration/: test_anonymise.py  test_assess.py  test_au_detect.py  test_detect.py  test_health.py  test_pseudonymise.py  test_refine.py
tests/mcp/: conftest.py  test_server.py  test_tools.py
tests/unit/: test_analyser.py  test_anonymiser.py  test_assessor.py  test_entities.py  test_judge_model.py  test_properties.py  test_pseudonymiser.py  test_recognisers.py  test_refiner.py
