[project]
name = "alias"
version = "0.1.0"
description = "Pseudonymisation service for Australian financial context"
authors = [
    {name = "Mitchell Lisle", email = "m.lisle90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alias"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=2.0,<3.0",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4,<8",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
