[project]
name = "alias"
version = "0.1.0"
description = "Pseudonymisation service for Australian financial context"
authors = [
    {name = "Mitchell Lisle", email = "m.lisle90@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alias"]

[dependency-groups]
# Models are in a separate group so they are included in both dev (uv sync)
# and production (uv sync --no-dev) builds. Only the dev toolchain is excluded
# from the runtime image.
models = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
dev = [
    "ruff>=0.9.0",
    "mypy>=2.0,<3.0",
    "pytest>=9.0,<10.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4,<8",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
# mypy runs at 3.12 so numpy 2.x bundled stubs (which use the `type` statement)
# parse cleanly. 3.11 syntax compatibility is enforced by ruff's target-version
# and verified at runtime by the CI Docker matrix (3.11 / 3.12 / 3.13).
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
