[project]
name = "priveil"
version = "0.1.1"
description = "Pseudonymisation service for Australian financial services"
authors = [
    {name = "Mitchell Lisle", email = "m.lisle90@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4,<3.0",
    "pydantic-settings>=2.14.2,<3.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "spacy>=3.8.14",
    "pydantic-ai>=2.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.28.0",
]

[project.scripts]
priveil-mcp = "priveil.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priveil"]

[dependency-groups]
# Models are in a separate group so they are included in both dev (uv sync)
# and production (uv sync --no-dev) builds. Only the dev toolchain is excluded
# from the runtime image.
models = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
dev = [
    "ruff>=0.15.20",
    "mypy>=2.1.0,<3.0",
    "pytest>=9.1.1,<10.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0,<8",
    "httpx>=0.28.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "dist", "build", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
# mypy runs at 3.12 so numpy 2.x bundled stubs (which use the `type` statement)
# parse cleanly. 3.11 syntax compatibility is enforced by ruff's target-version
# and verified at runtime by the CI Docker matrix (3.11 / 3.12 / 3.13).
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
